--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kiryu",
   "version": "1.0.0",
-  "description": "A bot that automatically gets its code from a Discord channel.\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[C",
+  "description": "A bot that automatically gets its code from a Discord channel.",
   "main": "index.js",
   "type": "module",
   "scripts": {
