--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "author": "mistval",
   "license": "MIT",
   "dependencies": {
+    "better-sqlite3": "^7.4.5",
     "dotenv": "^10.0.0",
-    "eris": "^0.15.1"
+    "eris": "^0.16.1"
   }
 }
