--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "author": "mistval",
   "license": "MIT",
   "dependencies": {
-    "better-sqlite3": "^8.0.1",
+    "@pagerduty/pdjs": "^2.2.4",
+    "better-sqlite3": "^11.7.0",
     "dotenv": "^10.0.0",
-    "eris": "^0.16.1"
+    "eris": "^0.16.1",
+    "hello-world-npm": "^1.1.1"
   }
 }
